# UnRoll-Ai-backened

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_chat.py  verify_schema.py
alembic/: env.py
alembic/versions/: 2e3b7f05fccf_create_analyses_table.py  56a94373e993_add_conversations_and_messages_tables.py  9e26e300b7eb_create_users_table.py  a4a5ff9e72aa_remove_hire_recommendation_column.py  e18cc744ca70_create_jobs_and_resumes_tables.py
app/: main.py  requirements.txt
app/agents/: registry.py
app/agents/chatbot/: graph.py  nodes.py  state.py
app/agents/chatbot/tools/: __init__.py  analysis_tools.py  job_tools.py  resume_tools.py
app/api/v1/: router.py
app/api/v1/endpoints/: analysis.py  auth.py  chat.py  jobs.py
app/core/: config.py  db.py  dependencies.py  exceptions.py  security.py
app/models/: analysis.py  conversation.py  job.py  resume.py  user.py
app/schemas/: analysis.py  chat.py  job.py  user.py
app/services/: analysis_service.py  auth_service.py  chat_service.py  job_service.py
app/utils/: ai.py  utils.py
docs/: analysis-flow.md
